// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlanCard /> Snapshots should match snapshot PlanCard with ribbon 1`] = `
.c0 {
  padding: 16px  16px  16px  16px;
  border-radius: 8px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: inline-block;
  top: 16px;
  left: 0;
  margin-left: -16px;
  margin-bottom: 16px;
  padding: 4px 12px 4px 16px;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
  background-color: #F5F5FA;
  color: #41414A;
}

.c1 {
  max-width: 280px;
}

<div>
  <section
    class="c0 c1"
  >
    <span
      class="c2"
    >
      Label
    </span>
  </section>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot PlanCard with secondary ribbon 1`] = `
.c0 {
  padding: 16px  16px  16px  16px;
  border-radius: 8px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #652CDB;
  display: inline-block;
  top: 16px;
  left: 0;
  margin-left: -16px;
  margin-bottom: 16px;
  padding: 4px 12px 4px 16px;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
  background-color: #652CDB;
  color: #FFFFFF;
}

.c1 {
  max-width: 280px;
}

<div>
  <section
    class="c0 c1"
  >
    <span
      class="c2"
    >
      Label
    </span>
  </section>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot PlanCard with tertiary ribbon 1`] = `
.c0 {
  padding: 16px  16px  16px  16px;
  border-radius: 8px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #22766B;
  display: inline-block;
  top: 16px;
  left: 0;
  margin-left: -16px;
  margin-bottom: 16px;
  padding: 4px 12px 4px 16px;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
  background-color: #22766B;
  color: #FFFFFF;
}

.c1 {
  max-width: 280px;
}

<div>
  <section
    class="c0 c1"
  >
    <span
      class="c2"
    >
      Label
    </span>
  </section>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot default PlanCard with Content 1`] = `
.c0 {
  padding: 16px  16px  16px  16px;
  border-radius: 8px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  max-width: 280px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: -webkit-box;
  height: 40px;
  margin: 8px 0 12px;
  color: inherit;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: -o-ellipsis-lastline;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-top: 12px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-bottom: 8px;
}

<div>
  <section
    class="c0 c1"
  >
    <div
      class=""
    >
      <h3
        class="c2"
      >
        Gympass Black for employees with Buddha Spa + Reebook included
      </h3>
      <strong
        class="c3"
      >
        U$ 99.90
      </strong>
      <span
        class="c4"
      >
        /month
      </span>
    </div>
  </section>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot variant PlanCard with Content 1`] = `
.c0 {
  padding: 16px  16px  16px  16px;
  border-radius: 8px;
  background-color: #8051E1;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  max-width: 280px;
  color: #FFFFFF;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: -webkit-box;
  height: 40px;
  margin: 8px 0 12px;
  color: inherit;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: -o-ellipsis-lastline;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-top: 12px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-bottom: 8px;
}

<div>
  <section
    class="c0 c1"
  >
    <div
      class=""
    >
      <h3
        class="c2"
      >
        Gympass Black for employees with Buddha Spa + Reebook included
      </h3>
      <strong
        class="c3"
      >
        U$ 99.90
      </strong>
      <span
        class="c4"
      >
        /month
      </span>
    </div>
  </section>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot with default PlanCard 1`] = `
.c6 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c6:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c6:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0 {
  padding: 16px  16px  16px  16px;
  border-radius: 8px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  max-width: 280px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: -webkit-box;
  height: 40px;
  margin: 8px 0 12px;
  color: inherit;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: -o-ellipsis-lastline;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-top: 12px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-bottom: 8px;
}

.c5 {
  padding-top: 8px;
}

.c5 *:not(:last-child) {
  margin-bottom: 8px;
}

<div>
  <section
    class="c0 c1"
  >
    <header
      class=""
    >
      Gympass PlanCard
    </header>
    <div
      class=""
    >
      <h3
        class="c2"
      >
        Gympass Black for employees with Buddha Spa + Reebook included
      </h3>
      <strong
        class="c3"
      >
        U$ 99.90
      </strong>
      <span
        class="c4"
      >
        /month
      </span>
      content's children is rendered
    </div>
    <footer
      class="c5"
    >
      <button
        class="c6"
      >
        should have buttons
      </button>
    </footer>
  </section>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot with secondary PlanCard 1`] = `
.c6 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c6:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c6:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0 {
  padding: 16px  16px  16px  16px;
  border-radius: 8px;
  background-color: #8051E1;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  max-width: 280px;
  color: #FFFFFF;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: -webkit-box;
  height: 40px;
  margin: 8px 0 12px;
  color: inherit;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: -o-ellipsis-lastline;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-top: 12px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-bottom: 8px;
}

.c5 {
  padding-top: 8px;
}

.c5 *:not(:last-child) {
  margin-bottom: 8px;
}

<div>
  <section
    class="c0 c1"
  >
    <header
      class=""
    >
      Gympass PlanCard
    </header>
    <div
      class=""
    >
      <h3
        class="c2"
      >
        Gympass Black for employees with Buddha Spa + Reebook included
      </h3>
      <strong
        class="c3"
      >
        U$ 99.90
      </strong>
      <span
        class="c4"
      >
        /month
      </span>
      content's children is rendered
    </div>
    <footer
      class="c5"
    >
      <button
        class="c6"
      >
        should have buttons
      </button>
    </footer>
  </section>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot with tertiary PlanCard 1`] = `
.c6 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #F46152;
  border: 2px solid #F46152;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(244,97,82,0.45);
}

.c6:active {
  background-color: #F78D82;
  border-color: #F78D82;
  color: #FFFFFF;
}

.c6:disabled {
  background-color: #DBDBE8;
  border-color: #DBDBE8;
  color: #9898A6;
  cursor: not-allowed;
}

.c0 {
  padding: 16px  16px  16px  16px;
  border-radius: 8px;
  background-color: #2B9486;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  max-width: 280px;
  color: #FFFFFF;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: -webkit-box;
  height: 40px;
  margin: 8px 0 12px;
  color: inherit;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: -o-ellipsis-lastline;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-top: 12px;
}

.c4 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  display: block;
  color: inherit;
  margin-bottom: 8px;
}

.c5 {
  padding-top: 8px;
}

.c5 *:not(:last-child) {
  margin-bottom: 8px;
}

<div>
  <section
    class="c0 c1"
  >
    <header
      class=""
    >
      Gympass PlanCard
    </header>
    <div
      class=""
    >
      <h3
        class="c2"
      >
        Gympass Black for employees with Buddha Spa + Reebook included
      </h3>
      <strong
        class="c3"
      >
        U$ 99.90
      </strong>
      <span
        class="c4"
      >
        /month
      </span>
      content's children is rendered
    </div>
    <footer
      class="c5"
    >
      <button
        class="c6"
      >
        should have buttons
      </button>
    </footer>
  </section>
</div>
`;
